--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <!-- Header Section -->
+    <header>
+        <nav class="navbar">
+            <div class="navbar-brand">OnlineStore</div>
+            <input type="checkbox" checked id="menu-toggle" >
+            <label for="menu-toggle" class="hamburger">&#9776;</label>
+            <ul class="navbar-menu">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#products">Products</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
