adding a Hero section

--- a/index.html
+++ b/index.html
@@ -20,5 +20,13 @@
             </ul>
         </nav>
     </header>
+    <!-- Hero Section -->
+    <header class="hero-section">
+        <div class="hero-content">
+            <h1>Welcome to Our Store</h1>
+            <p>Discover the latest and greatest in technology.</p>
+            <a href="#products" class="hero-btn">Shop Now</a>
+        </div>
+    </header>
 </body>
 </html>
