--- a/index.html
+++ b/index.html
@@ -28,5 +28,62 @@
             <a href="#products" class="hero-btn">Shop Now</a>
         </div>
     </header>
+    <!-- Product Section -->
+    <section id="products" class="product-section">
+        <div class="container">
+            <h2 class="text-center">Our Products</h2>
+            <div class="product-grid">
+                <div class="product-card">
+                    <img src="iphone.jpg" alt="Product 1">
+                    <h3>Mobile 1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <a href="#" class="btn">Shop Now</a>
+                </div>
+                <div class="product-card">
+                    <img src="iphone.jpg" alt="Product 2">
+                    <h3>Mobile 2</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <a href="#" class="btn">Shop Now</a>
+                </div>
+                <div class="product-card">
+                    <img src="iphone.jpg" alt="Product 3">
+                    <h3>Mobile 3</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <a href="#" class="btn">Shop Now</a>
+                </div>
+                <div class="product-card">
+                    <img src="iphone.jpg" alt="Product 4">
+                    <h3>Mobile 4</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <a href="#" class="btn">Shop Now</a>
+                </div>
+                <div class="product-card">
+                    <img src="iphone.jpg" alt="Product 1">
+                    <h3>Mobile 5</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <a href="#" class="btn">Shop Now</a>
+                </div>
+                <div class="product-card">
+                    <img src="iphone.jpg" alt="Product 2">
+                    <h3>Mobile 6</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <a href="#" class="btn">Shop Now</a>
+                </div>
+                <div class="product-card">
+                    <img src="iphone.jpg" alt="Product 3">
+                    <h3>Mobile 7</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <a href="#" class="btn">Shop Now</a>
+                </div>
+                <div class="product-card">
+                    <img src="iphone.jpg" alt="Product 4">
+                    <h3>Mobile 8</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <a href="#" class="btn">Shop Now</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
