--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
             </div>
         </div>
     </section>
+     <!-- Footer Section -->
+     <footer class="footer">
+        <p>&copy; 2024 Online Store. All rights reserved.</p>
+        <a href="#" class="text-white">Privacy Policy</a> | <a href="#" class="text-white">Terms of Service</a>
+    </footer>
 
 </body>
 </html>
